--- a/final_data/clean_data.ipynb
+++ b/final_data/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,12 +246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def process_mat_data(df):\n",
-    "    print(\"Processing\" + str(df) + \"...\")\n",
     "    df = remove_outliers_and_apply_thresholds(df, columns_to_check, thresholds)\n",
     "    data = convert_to_datetime(df)\n",
     "    XYZdata = extract_XYZcolumns(data)\n",
@@ -319,12 +318,329 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "processed_dfs = [process_mat_data(df) for df in df_list]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dateTime</th>\n",
+       "      <th>BandAccX</th>\n",
+       "      <th>BandAccY</th>\n",
+       "      <th>BandAccZ</th>\n",
+       "      <th>altitude</th>\n",
+       "      <th>course</th>\n",
+       "      <th>hacc</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Acceleration_Z</th>\n",
+       "      <th>MagneticField_X</th>\n",
+       "      <th>MagneticField_Y</th>\n",
+       "      <th>MagneticField_Z</th>\n",
+       "      <th>Orientation_X</th>\n",
+       "      <th>Orientation_Y</th>\n",
+       "      <th>Orientation_Z</th>\n",
+       "      <th>AngularVelocity_X</th>\n",
+       "      <th>AngularVelocity_Y</th>\n",
+       "      <th>AngularVelocity_Z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>34401</td>\n",
+       "      <td>2126.000000</td>\n",
+       "      <td>2126.000000</td>\n",
+       "      <td>2126.000000</td>\n",
+       "      <td>3.440100e+04</td>\n",
+       "      <td>34401.0</td>\n",
+       "      <td>3.440100e+04</td>\n",
+       "      <td>3.440100e+04</td>\n",
+       "      <td>3.440100e+04</td>\n",
+       "      <td>34401.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>34401.000000</td>\n",
+       "      <td>34401.000000</td>\n",
+       "      <td>34401.000000</td>\n",
+       "      <td>34401.000000</td>\n",
+       "      <td>34401.000000</td>\n",
+       "      <td>34401.000000</td>\n",
+       "      <td>34401.000000</td>\n",
+       "      <td>34401.000000</td>\n",
+       "      <td>34401.000000</td>\n",
+       "      <td>34401.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2024-06-06 11:51:34.047408128</td>\n",
+       "      <td>3605.002226</td>\n",
+       "      <td>1805.011312</td>\n",
+       "      <td>362.367654</td>\n",
+       "      <td>6.944800e+01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.964200e+01</td>\n",
+       "      <td>5.233552e+01</td>\n",
+       "      <td>4.863300e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.094431</td>\n",
+       "      <td>-0.317992</td>\n",
+       "      <td>-22.997045</td>\n",
+       "      <td>-14.332205</td>\n",
+       "      <td>18.212454</td>\n",
+       "      <td>-47.600360</td>\n",
+       "      <td>-37.074738</td>\n",
+       "      <td>0.002452</td>\n",
+       "      <td>0.003017</td>\n",
+       "      <td>0.001085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2024-06-06 11:47:48.119000</td>\n",
+       "      <td>-4481.400000</td>\n",
+       "      <td>-1898.200000</td>\n",
+       "      <td>-2124.200000</td>\n",
+       "      <td>6.944800e+01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.964200e+01</td>\n",
+       "      <td>5.233552e+01</td>\n",
+       "      <td>4.863300e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-39.928432</td>\n",
+       "      <td>-44.156250</td>\n",
+       "      <td>-66.337502</td>\n",
+       "      <td>-49.181252</td>\n",
+       "      <td>-179.974899</td>\n",
+       "      <td>-89.977197</td>\n",
+       "      <td>-179.989661</td>\n",
+       "      <td>-0.780572</td>\n",
+       "      <td>-1.933587</td>\n",
+       "      <td>-2.590588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2024-06-06 11:49:40.358000128</td>\n",
+       "      <td>3379.250000</td>\n",
+       "      <td>1151.275000</td>\n",
+       "      <td>26.658333</td>\n",
+       "      <td>6.944800e+01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.964200e+01</td>\n",
+       "      <td>5.233552e+01</td>\n",
+       "      <td>4.863300e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.058026</td>\n",
+       "      <td>-16.096876</td>\n",
+       "      <td>-36.971251</td>\n",
+       "      <td>-33.300003</td>\n",
+       "      <td>-70.783164</td>\n",
+       "      <td>-79.724320</td>\n",
+       "      <td>-121.147070</td>\n",
+       "      <td>-0.007002</td>\n",
+       "      <td>-0.005007</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2024-06-06 11:51:36.500999936</td>\n",
+       "      <td>4070.500000</td>\n",
+       "      <td>1641.000000</td>\n",
+       "      <td>386.533333</td>\n",
+       "      <td>6.944800e+01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.964200e+01</td>\n",
+       "      <td>5.233552e+01</td>\n",
+       "      <td>4.863300e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.412763</td>\n",
+       "      <td>2.817188</td>\n",
+       "      <td>-27.075000</td>\n",
+       "      <td>-17.681252</td>\n",
+       "      <td>32.468168</td>\n",
+       "      <td>-56.098621</td>\n",
+       "      <td>-8.566053</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2024-06-06 11:53:27.348999936</td>\n",
+       "      <td>4685.500000</td>\n",
+       "      <td>2308.200000</td>\n",
+       "      <td>668.100000</td>\n",
+       "      <td>6.944800e+01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.964200e+01</td>\n",
+       "      <td>5.233552e+01</td>\n",
+       "      <td>4.863300e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.773683</td>\n",
+       "      <td>15.450001</td>\n",
+       "      <td>-14.482500</td>\n",
+       "      <td>3.581250</td>\n",
+       "      <td>109.514174</td>\n",
+       "      <td>-31.823968</td>\n",
+       "      <td>1.741572</td>\n",
+       "      <td>0.003998</td>\n",
+       "      <td>0.003519</td>\n",
+       "      <td>0.008620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2024-06-06 11:55:23.448000</td>\n",
+       "      <td>8269.000000</td>\n",
+       "      <td>7045.400000</td>\n",
+       "      <td>6013.800000</td>\n",
+       "      <td>6.944800e+01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.964200e+01</td>\n",
+       "      <td>5.233552e+01</td>\n",
+       "      <td>4.863300e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>28.344778</td>\n",
+       "      <td>38.193752</td>\n",
+       "      <td>54.037502</td>\n",
+       "      <td>45.956253</td>\n",
+       "      <td>179.972149</td>\n",
+       "      <td>89.750073</td>\n",
+       "      <td>179.996905</td>\n",
+       "      <td>1.401754</td>\n",
+       "      <td>2.053029</td>\n",
+       "      <td>1.120924</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1860.071295</td>\n",
+       "      <td>950.985917</td>\n",
+       "      <td>675.714709</td>\n",
+       "      <td>1.477950e-11</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.332701e-12</td>\n",
+       "      <td>1.464450e-11</td>\n",
+       "      <td>2.079256e-12</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.705926</td>\n",
+       "      <td>17.731397</td>\n",
+       "      <td>22.719992</td>\n",
+       "      <td>21.466977</td>\n",
+       "      <td>101.155354</td>\n",
+       "      <td>41.412413</td>\n",
+       "      <td>83.066344</td>\n",
+       "      <td>0.111538</td>\n",
+       "      <td>0.157522</td>\n",
+       "      <td>0.154141</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            dateTime     BandAccX     BandAccY     BandAccZ  \\\n",
+       "count                          34401  2126.000000  2126.000000  2126.000000   \n",
+       "mean   2024-06-06 11:51:34.047408128  3605.002226  1805.011312   362.367654   \n",
+       "min       2024-06-06 11:47:48.119000 -4481.400000 -1898.200000 -2124.200000   \n",
+       "25%    2024-06-06 11:49:40.358000128  3379.250000  1151.275000    26.658333   \n",
+       "50%    2024-06-06 11:51:36.500999936  4070.500000  1641.000000   386.533333   \n",
+       "75%    2024-06-06 11:53:27.348999936  4685.500000  2308.200000   668.100000   \n",
+       "max       2024-06-06 11:55:23.448000  8269.000000  7045.400000  6013.800000   \n",
+       "std                              NaN  1860.071295   950.985917   675.714709   \n",
+       "\n",
+       "           altitude   course          hacc      latitude     longitude  \\\n",
+       "count  3.440100e+04  34401.0  3.440100e+04  3.440100e+04  3.440100e+04   \n",
+       "mean   6.944800e+01      0.0  1.964200e+01  5.233552e+01  4.863300e+00   \n",
+       "min    6.944800e+01      0.0  1.964200e+01  5.233552e+01  4.863300e+00   \n",
+       "25%    6.944800e+01      0.0  1.964200e+01  5.233552e+01  4.863300e+00   \n",
+       "50%    6.944800e+01      0.0  1.964200e+01  5.233552e+01  4.863300e+00   \n",
+       "75%    6.944800e+01      0.0  1.964200e+01  5.233552e+01  4.863300e+00   \n",
+       "max    6.944800e+01      0.0  1.964200e+01  5.233552e+01  4.863300e+00   \n",
+       "std    1.477950e-11      0.0  5.332701e-12  1.464450e-11  2.079256e-12   \n",
+       "\n",
+       "         speed  ...  Acceleration_Z  MagneticField_X  MagneticField_Y  \\\n",
+       "count  34401.0  ...    34401.000000     34401.000000     34401.000000   \n",
+       "mean       0.0  ...        3.094431        -0.317992       -22.997045   \n",
+       "min        0.0  ...      -39.928432       -44.156250       -66.337502   \n",
+       "25%        0.0  ...       -0.058026       -16.096876       -36.971251   \n",
+       "50%        0.0  ...        3.412763         2.817188       -27.075000   \n",
+       "75%        0.0  ...        7.773683        15.450001       -14.482500   \n",
+       "max        0.0  ...       28.344778        38.193752        54.037502   \n",
+       "std        0.0  ...        5.705926        17.731397        22.719992   \n",
+       "\n",
+       "       MagneticField_Z  Orientation_X  Orientation_Y  Orientation_Z  \\\n",
+       "count     34401.000000   34401.000000   34401.000000   34401.000000   \n",
+       "mean        -14.332205      18.212454     -47.600360     -37.074738   \n",
+       "min         -49.181252    -179.974899     -89.977197    -179.989661   \n",
+       "25%         -33.300003     -70.783164     -79.724320    -121.147070   \n",
+       "50%         -17.681252      32.468168     -56.098621      -8.566053   \n",
+       "75%           3.581250     109.514174     -31.823968       1.741572   \n",
+       "max          45.956253     179.972149      89.750073     179.996905   \n",
+       "std          21.466977     101.155354      41.412413      83.066344   \n",
+       "\n",
+       "       AngularVelocity_X  AngularVelocity_Y  AngularVelocity_Z  \n",
+       "count       34401.000000       34401.000000       34401.000000  \n",
+       "mean            0.002452           0.003017           0.001085  \n",
+       "min            -0.780572          -1.933587          -2.590588  \n",
+       "25%            -0.007002          -0.005007           0.000000  \n",
+       "50%             0.000000           0.000000           0.000000  \n",
+       "75%             0.003998           0.003519           0.008620  \n",
+       "max             1.401754           2.053029           1.120924  \n",
+       "std             0.111538           0.157522           0.154141  \n",
+       "\n",
+       "[8 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "processed_dfs[0].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
