--- a/Traditional_ML/RF_Classifier.ipynb
+++ b/Traditional_ML/RF_Classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,28 +16,6 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.feature_selection import SelectKBest, f_classif\n",
     "import xgboost as xgb\n",
-    "class RF_Classifier(BaseEstimator, TransformerMixin):\n",
-    "    def __init__(self, n_estimators=100, max_depth=None, random_state=None):\n",
-    "        self.n_estimators = n_estimators\n",
-    "        self.max_depth = max_depth\n",
-    "        self.random_state = random_state\n",
-    "\n",
-    "    def fit(self, X, y):\n",
-    "        self.rf = RandomForestClassifier(\n",
-    "            n_estimators=self.n_estimators,\n",
-    "            max_depth=self.max_depth,\n",
-    "            random_state=self.random_state\n",
-    "        )\n",
-    "        self.rf.fit(X, y)\n",
-    "        self.feature_importances_ = self.rf.feature_importances_\n",
-    "        return self\n",
-    "\n",
-    "    def transform(self, X):\n",
-    "        try:\n",
-    "            getattr(self, \"rf\")\n",
-    "        except AttributeError:\n",
-    "            raise NotFittedError(\"This RandomForest CLassifier instance is not fitted yet. Call 'fit' with appropriate arguments before using this method.\")\n",
-    "        return self.rf.predict(X)\n",
     "\n",
     "train = pd.read_csv(\n",
     "    \"../Dataset/Preparation_dir/final_data/feature_engineering_data/version2/train.csv\"\n",
@@ -51,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +37,7 @@
      "output_type": "stream",
      "text": [
       "Fitting 3 folds for each of 50 candidates, totalling 150 fits\n",
-      "Best parameters found:  {'n_estimators': 200, 'min_samples_split': 5, 'min_samples_leaf': 4, 'max_features': 'sqrt', 'max_depth': 30}\n",
+      "Best parameters found:  {'n_estimators': 500, 'min_samples_split': 5, 'min_samples_leaf': 4, 'max_features': 'log2', 'max_depth': 70}\n",
       "Accuracy: 0.34952941176470587\n",
       "Mean Squared Error (MSE): 4.741882352941176\n",
       "Root Mean Squared Error (RMSE): 2.177586359468018\n",
@@ -120,9 +98,9 @@
     "\n",
     "# 定义参数网格\n",
     "param_grid = {\n",
-    "    'n_estimators': [50, 100, 200],  # 树的数量\n",
+    "    'n_estimators': [200, 300, 500],  # 树的数量\n",
     "    'max_features': ['sqrt', 'log2'],  # 考虑的最大特征数\n",
-    "    'max_depth': [10, 20, 30],  # 最大树深度\n",
+    "    'max_depth': [30, 50, 70],  # 最大树深度\n",
     "    'min_samples_split': [2, 5, 10],  # 分割内部节点所需的最小样本数\n",
     "    'min_samples_leaf': [1, 2, 4]  # 叶节点所需的最小样本数\n",
     "}\n",
@@ -156,6 +134,71 @@
     "\n",
     "f1 = f1_score(y_test, y_pred, average='macro')\n",
     "print(f'F1 Score: {f1}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1, Accuracy: 0.5294117647058824, R2: 0.042445223000778465, F1: 0.4174440058132944\n",
+      "Epoch: 2, Accuracy: 0.2777647058823529, R2: -2.1834612390167947, F1: 0.12173464690175856\n",
+      "Epoch: 3, Accuracy: 0.3496470588235294, R2: -1.6385413190968747, F1: 0.30343755249205223\n",
+      "Epoch: 4, Accuracy: 0.2777647058823529, R2: -2.1834612390167947, F1: 0.12173464690175856\n",
+      "Epoch: 5, Accuracy: 0.1652941176470588, R2: -2.0742548103659217, F1: 0.17882522644831464\n",
+      "Early stopping\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, r2_score, f1_score\n",
+    "from joblib import dump, load\n",
+    "\n",
+    "best_model = None\n",
+    "n_epochs = 10\n",
+    "rf_model = RandomForestClassifier(n_estimators=1)\n",
+    "\n",
+    "X_train_selected_values = X_train_selected.values\n",
+    "y_train_values = y_train.values\n",
+    "\n",
+    "best_score = 0\n",
+    "epochs_without_improvement = 0\n",
+    "\n",
+    "for epoch in range(n_epochs):\n",
+    "    rf_model.set_params(n_estimators=rf_model.get_params()['n_estimators'] + 1)\n",
+    "    rf_model.fit(X_train_selected_values, y_train_values)\n",
+    "    y_train_values= rf_model.predict(X_train_selected_values)\n",
+    "\n",
+    "    # 预测\n",
+    "    y_pred = rf_model.predict(X_test_selected.values)\n",
+    "\n",
+    "    # 计算评估指标\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "    f1 = f1_score(y_test, y_pred, average='weighted')  # 使用加权平均 F1 分数\n",
+    "\n",
+    "    print(f'Epoch: {epoch+1}, Accuracy: {accuracy}, R2: {r2}, F1: {f1}')\n",
+    "\n",
+    "    # 如果当前模型的 F1 分数更高，保存当前模型\n",
+    "    if accuracy > best_score:\n",
+    "        best_score = f1\n",
+    "        best_model = rf_model\n",
+    "        # 保存模型\n",
+    "        dump(best_model, 'best_model.pkl')\n",
+    "\n",
+    "    # 早停\n",
+    "    if f1 > best_score:\n",
+    "        best_score = f1\n",
+    "        epochs_without_improvement = 0\n",
+    "    else:\n",
+    "        epochs_without_improvement += 1\n",
+    "        if epochs_without_improvement >= 5:  # 如果连续 5 个 epoch 没有改善，就停止训练\n",
+    "            print('Early stopping')\n",
+    "            break"
    ]
   }
  ],
